2012-01-19  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_odbc.cc: Check for NULL pointers.

2012-01-04  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc: Fixed an error when checking multiple
	  preconditions. Fixed precondition evaluation logic.

2012-01-03  Ramon Novoa  <rnovoa@artica.es>

	* pandora_windows_service.h,
	  modules/pandora_module.h,
	  modules/pandora_module_factory.cc,
	  modules/pandora_module.cc,
	  pandora_windows_service.cc: Added support for intensive modules.

2011-12-14  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_perfcounter.cc,
	  modules/pandora_module_perfcounter.h: Use MinrGW's pdh.h
	  instead of our own definitions.

	* modules/pandora_module.cc: Fixed a bug in pre-conditions that led to an
	  infinite loop.

2011-12-12  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc: Removed some debugging messages.

	* modules/pandora_module.h,
	  modules/pandora_module.cc,
	  pandora_windows_service.cc: Fixed pre-conditions (were not working
	  properly).

	* modules/pandora_module_regexp.cc: Improved file status detection and
	  small fixes.

2011-12-09  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc: Added a debug message.

	* modules/pandora_module_perfcounter.cc,
	  modules/pandora_module_perfcounter.h,
	  modules/pandora_module_factory.cc: Added support to read the
	  'cooked' value of a performance counter.

2011-11-30  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_logevent.cc,
	  modules/pandora_module_logevent.h: Added support for regular
	  expressions to the pattern filter.

2011-11-29  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_snmpget.cc: Modified the call to snmpget.exe
	  to directly retrieve the value.

2011-11-29  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.h,
	  modules/pandora_module_exec.cc,
	  modules/pandora_module_exec.h,
	  modules/pandora_module_list.cc,
	  modules/pandora_module_factory.cc,